--- a/flashbtc/index.html
+++ b/flashbtc/index.html
@@ -39,8 +39,8 @@
         </div>
         <div class="nav-show-help">
             <p id="telegram">Telegram</p>
-            <p id="website">Website</p>
-            <p id="email">Email</p>
+            <p id="website" style="display: none;">Website</p>
+            <p id="email" style="display: none;">Email</p>
             <p id="about">About</p>
             <p id="activateSoftware">Activate Software</p>
         </div>
@@ -89,7 +89,7 @@
 
         <hr style="color: white; margin-top: 3em;">
         <div id="tryDemoId">
-            <p style="padding-left: 1em;">This Automatically sends a flash <b>USDT ERC20</b> to Noir Software Test Addresses that can be checked via the Blockchain. We only offer ERC20 for this Version update</p>
+            <p style="padding-left: 1em;">This Automatically sends a flash <b>USDT ERC20</b> to HYPER FLASH Software Test Addresses that can be checked via the Blockchain. We only offer ERC20 for this Version update</p>
             <button id="demoTry">Try Demo using ERC20</button>
         </div>
             <p style="padding-left: 1em; font-size: 12px;" id="transactionID"></p>
