--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <!-- index.html -->
 
      <div id="install-prompt" style="display: none;">
-        <p style="color: lime;">You have to install Flash USDT Transaction Core</p>
+        <p style="color: lime;">You have to install HYPER Flash USDT Transaction Core</p>
         <p>For windows and Linux we perfer installation with Goggle Chrome by just clicking on the Install Button below</p>
         <p>For Android we perfer installation with Goggle Chorme by just clicking on the Install Button below</p>
         <button id="install-button">Install</button>
